# Serverless-Workflow-Failure-To-Do-Automation-Service

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  terraform_ci.yml
app/: __init__.py  handler.py  repository.py  service.py
app/tests/: test_placeholder.py
docs/: api_spec.md  architecture.md  data_model.md  user_stories.md
infra/: README.md
infra/terraform/: .terraform.lock.hcl  api_gw.tf  dynamodb.tf  lambda.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infra/terraform/env/: dev.tfvars  prod.tfvars
