[project]
name = "serverless-workflow-failure-todo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["app/tests"]
# - The path pytest can get the tests from
addopts = "-q"
# - will give smaller error logs (quieter)

[tool.ruff]
# personal preference as I have a larger monitor + tend to have larger workstations on the job, line length isnt usually a dealbreaker
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F = basic errors, I = import sorting, B = bugs, UP = pyupgrade
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
